--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Alchemist Adventure</title>
+		<link rel="stylesheet" type="text/css" href="style/style.css">
 		<meta charset="utf-8"/>
 	</head>
 	<body>
