--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="style/style.css">
 		<meta charset="utf-8"/>
 	</head>
-	<body>
+	<body scroll=no>
 		<div id="app"></div>
 		<script src="build/app.bundle.js"></script>
 	</body>
