Initial stat menu exists. Now I'll have to take a look at how I want to aggregate and display the stats nicely.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 		<meta charset="utf-8"/>
 	</head>
 	<body scroll=no>
-		<div id="app"></div>
+		<div id="app">
+		<div id="playscreen"></div>
+		<div id="menuscreen"></div>
+		</div>
 		<script src="build/app.bundle.js"></script>
 	</body>
 </html>
